# simsgeo

./: .gitignore  .gitmodules  CMakeLists.txt  README.md  setup.py
.github/workflows/: python-test.yml
driver/: driver.py  main.cpp
driver/boozer/: boozer.py  boozer_flo.py
simsgeo/: __init__.py  biotsavart.py  curve.py  fouriercurve.py  magnetic_surface.py  magnetic_surface_leastsquares.py  magneticaxis.py  objectives.py  surface.py
simsgeopp/: biot_savart.cpp  biot_savart.h  biot_savart_derivative.cpp  curve.cpp  curverzfourier.cpp  curvexyzfourier.cpp  fouriercurve.cpp  pycurve.cpp  pysurface.cpp  python.cpp  surface.cpp  surfacerzfourier.cpp  surfacexyzfourier.cpp
tests/: __init__.py  test_biotsavart.py  test_boozer.py  test_coil_objectives.py  test_curve.py  test_surface.py
